--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Created by https://www.gitignore.io/api/unity
 
 ### Unity ###
 /[Ll]ibrary/
@@ -7,6 +6,10 @@
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
+/Assets/StreamingAssets/
+/Assets/Sprites/
+/Assets/Atlases/
+/Assets/dlc/
 
 # Visual Studio 2015 cache directory
 /.vs/
@@ -35,8 +38,11 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-
-# End of https://www.gitignore.io/api/unity
+Assets/Atlases.meta
+Assets/Sprites.meta
+Assets/dlc.meta
+.vs/config/applicationhost.config
+Cache/
 
 # OS Generated
 desktop.ini
